recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {

if(t.tail == Nil)
  return l.head
	else (l.tail != Nil)
 
  return last(l.tail)+1
}